some fixed end very light version for footer and header.

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,18 @@
 <div th:fragment="header" xmlns:th="http://www.w3.org/1999/xhtml">
-    header
 
+    <style>
+        header { position: absolute;
+            width: 1280px;
+            height: 20px;
+
+            background: #8BECD5;}
+
+
+    </style>
+    <header>
+        header
+        <br><br>
+        <br><br>
+    </header>
 
 </div>
