--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -2,7 +2,16 @@
 
 
 
-    footer
+    <style>
+        footer { position: absolute;
+            width: 1280px;
+            height: 90px;
+
+            background: #8BECD5;}
+
+
+    </style>
+    <footer> </footer>
 
 
 </div>
