--- a/src/main/resources/templates/views/realGroupList.html
+++ b/src/main/resources/templates/views/realGroupList.html
@@ -11,7 +11,7 @@
         <tr th:each="group : ${groups}">
             <td th:text="${group.name}"></td>
             <td th:text="${group.number}"></td>
-            <td><a th:href="@{/delete/{id}(id=${group.id})}">Видалити Групу</a></td>
+            <td><a th:href="@{/group/delete/{id}(id=${group.id})}">Видалити Групу</a></td>
         </tr>
         </tbody>
     </table>
