--- a/src/main/resources/templates/views/santa_management_page.html
+++ b/src/main/resources/templates/views/santa_management_page.html
@@ -4,13 +4,14 @@
         <tr>
             <th>Назва</th>
             <th>Кількість дітей</th>
+            <th>Видалення групи</th>
         </tr>
         </thead>
         <tbody>
 
         <tr th:each="group : ${groups}">
-            <td th:text="${group.room}"></td>
-            <td th:text="${group.id}"></td>
+            <td th:text="${group.name}"></td>
+            <td th:text="${group.number}"></td>
             <td><a th:href="@{/delete/{id}(id=${group.id})}">Видалити Групу</a></td>
         </tr>
         </tbody>
