--- a/src/main/resources/templates/views/groupList.html
+++ b/src/main/resources/templates/views/groupList.html
@@ -1,3 +1,4 @@
+<!--
 <div th:fragment="groupList" xmlns:th="http://www.w3.org/1999/xhtml">
     <table>
         <thead>
@@ -17,4 +18,4 @@
         </tr>
         </tbody>
     </table>
-</div>
+</div>-->
