--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,3 +1,15 @@
+
+<head th:fragment="header" xmlns:th="http://www.w3.org/1999/xhtml">
+
+    <link th:href="@{/css/style.css}" rel="stylesheet" />
+    <!--<script type="text/javascript" th:src="@{/js/my.js}"></script>-->
+
+</head>
+<header > css includes etc title </header>
+
+
+
+<!--
 <div th:fragment="header" xmlns:th="http://www.w3.org/1999/xhtml">
 
     <style>
@@ -14,4 +26,4 @@
 
     </header>
 
-</div>
+</div>-->
