--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,6 +16,9 @@
 </div>
 <div lang="en" th:replace="fragments/footer :: footer"> </div>
 </main>
+
+
+<script type="text/javascript" th:src="@{/js/my.js}"></script>
 </body>
 
 </html>
