--- a/src/main/resources/templates/views/groupList.html
+++ b/src/main/resources/templates/views/groupList.html
@@ -1,4 +1,3 @@
-<!--
 <div th:fragment="groupList" xmlns:th="http://www.w3.org/1999/xhtml">
     <table>
         <thead>
@@ -18,4 +17,4 @@
         </tr>
         </tbody>
     </table>
-</div>-->
+</div>
