зроблена логіка редагування і створення групи

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,18 +1,6 @@
-<div th:fragment="header" xmlns:th="http://www.w3.org/1999/xhtml">
+<head th:fragment="header" xmlns:th="http://www.w3.org/1999/xhtml">
+    //css includes etc title
+    <link th:href="@{/css/style.css}" rel="stylesheet" />
+    <script type="text/javascript" th:src="@{/js/my.js}"></script>
 
-    <style>
-        header { position: absolute;
-            width: 1280px;
-            height: 20px;
-
-            background: #8BECD5;}
-
-
-    </style>
-    <header>
-        header
-        <br><br>
-        <br><br>
-    </header>
-
-</div>
+</head>
