group_management_data

--- a/src/main/resources/templates/views/santa_management_page.html
+++ b/src/main/resources/templates/views/santa_management_page.html
@@ -1,3 +1,23 @@
 <div th:fragment="santa_management_page" xmlns:th="http://www.w3.org/1999/xhtml">
-    santa_management_page text here
+
+
+
+    <center><h1>Lits Santa Party</h1></center>
+    <center><table></center>
+    <tr>
+        <center><td>Дата <input type="date"></td></center>
+    </tr>
+    <center></table></center>
+
+
+    <center><table></center>
+    <tr>
+        <center><td>Повідомлення<input></td></center>
+    </tr>
+    <center></table></center>
+
+    <center><button type="button" class="btn btn-primary">OK</button></center>
+
+
+
 </div>
